# Shield-Poker

./: .gitignore  Anchor.toml  BUILD_ANCHOR.md  BUILD_FIX.md  CRITICAL_FIX_BOTH_PLAYERS_MUST_JOIN_FIRST.md  CRITICAL_TEE_FIXES.md  Cargo.toml  DELEGATION_CACHING_FIX.md  DELEGATION_FIXES.md  DELEGATION_ORDER_FIX.md  DEPLOYMENT_GUIDE.md  FINAL_BUILD_FIX.md  FINAL_INVALID_WRITABLE_ACCOUNT_FIX.md  FINAL_PRIVACY_SUMMARY.md  JOIN_GAME_FIX.md  MAGICBLOCK_PER_INTEGRATION.md  NEXT_STEPS.md  PRIVACY_FIXED.md  PRIVACY_PROPERLY_IMPLEMENTED.md  PROJECT_SUMMARY.md  PROPER_PRIVACY_IMPLEMENTATION.md  QUICK_FIX_SUMMARY.md  QUICK_START.md  README.md  SETUP.md  TEE_DELEGATED_AUTHORITY_IMPLEMENTATION.md  TEE_TRANSACTION_FIXES.md  VRF_IMPLEMENTATION_STATUS.md  VRF_INTEGRATION.md  WALLET_PROMPTS_FIXED.md  WALLET_TRANSACTION_FIX.md  build-anchor.sh  docs.txt  game.txt  package-lock.json  package.json
app/: .gitignore  package-lock.json  package.json
app/src/: config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: CreateGameModal.tsx  GameChat.tsx  GlobalComponents.tsx  Navbar.tsx  ProfileBadge.tsx  TapestryProfileModal.tsx
app/src/context/: poker-context.tsx
app/src/hooks/: use-create-comment.ts  use-create-content.ts  use-create-profile.ts  use-current-wallet.ts  use-get-comments.ts  use-get-content.ts  use-get-contents.ts  use-get-profile-info.ts  use-get-profiles.ts  use-poker.ts  use-update-stats.ts
app/src/idl/: private_poker.json
programs/private-poker/: Cargo.toml
programs/private-poker/src/: lib.rs
tests/: private-poker.ts
(+12 files in other folders)
