

[package]
name = "private-poker"
version = "0.1.0"
description = "Shield Poker - Privacy-preserving poker game on Solana with MagicBlock PER"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "private_poker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
ephemeral-rollups-sdk = { version = "0.8.0", features = ["anchor", "access-control"] }
